src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
@use "../../../../styles/abstracts" as abstracts;

.p-material-request-detail {
	:global(.c-badge--error){
		box-shadow: 0 0 abstracts.$spacer-xs 0 abstracts.$cherry;

		@media (max-width: abstracts.$breakpoint-md) {
			margin-left: calc(#{abstracts.$spacer-xs} * -1);
			margin-top: calc(#{abstracts.$spacer-xxs} * -1);
		}
	}

	@media (min-width: abstracts.$breakpoint-md) {
		:has(&__tabs ) {
			// Only if the blade has tabs (not for non-reuse requests) and the detail blade itself should not have padding
			// This is a wide blade with the tabs on top. But not for all subsequent blades like approving/denying a request
			:global(#material-request-detail-blade){
				:global(.c-blade__title){
					padding-bottom: 0;
				}
			}
		}

		&__tabs {
			margin-right: auto;

			:global(.c-tab) {
				display: flex;
				justify-content: center;
				padding-bottom: abstracts.$spacer-md;
				color: abstracts.$neutral;
				border-bottom: 3px solid transparent;

				@include abstracts.focus-outline;

				&:global(.c-tab--active) {
					color: abstracts.$black;
					font-weight: abstracts.$font-weight-bold;
					border-bottom: 3px solid abstracts.$teal;
				}

				:global(.c-tab__label) {
					display: inline-flex;
					gap: abstracts.$spacer-xs;
				}
			}
		}
	}

	@media (max-width: abstracts.$breakpoint-md) {
		&__tabs {
			:global(.c-tabs__item) {
				display: flex;
				justify-content: center;
				flex-grow: 1;
				width: 100%;
			}

			:global(.c-tab){
				@include abstracts.focus-outline;

				display: flex;
				justify-content: center;
				color: abstracts.$zinc;
				font-weight: abstracts.$font-weight-normal;
				padding: abstracts.$spacer-sm;

				:global(.c-tab__icon) {
					font-size: abstracts.$font-size-lg;
					margin-right: 0;
				}

				&:global(.c-tab__label) {
					display: none;
				}

				&:global(.c-tab--active) {
					color: abstracts.$black;
					font-weight: abstracts.$font-weight-bold;
				}
			}
		}
	}

	:global([class*="Blade_c-blade__body-wrapper--content"]) {
		&:has([class*="p-material-request-detail__conversation"]){
			padding: 0;
			overflow: hidden;
			height: 100%;

			.p-material-request-detail__content-wrapper{
				height: 100%;
			}
		}
	}

	&__content-wrapper {
		> * {
			border-bottom: 1px solid abstracts.$silver;

			&:last-child {
				border-bottom: none;
			}
		}
	}

	&__title {
		> :last-child {
			margin-top: abstracts.$spacer-xs;
		}

		@media (min-width: abstracts.$breakpoint-md) {
			padding-bottom: abstracts.$spacer-md;
			display: flex;
			flex-direction: row;

			> :last-child {
				margin-top: 0;
			}
		}


		&--text{
			@include abstracts.blade-title-styling;

			margin-right: abstracts.$spacer-md;
		}
	}

	&__action-bar {
		display: flex;
		flex-direction: row;
		align-items: baseline;
		justify-content: space-between;

		@media (max-width: abstracts.$breakpoint-md) {
			align-items: center;

			&:has(.p-material-request-detail__download-message) {
				flex-direction: column;
				align-items: start;
			}
		}
	}

	&__evaluator-dropdown-flyout {
		max-width: 35rem;

		:global(.c-menu) {
			padding: 0;
		}
	}

	&__download-message {
		color: abstracts.$grey;
		font-size: abstracts.$font-size-base;
	}
}

